private-nlb-clusters/cluster1/demo_app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster1-webserver
  labels:
    mesh: banc365
    istio-injection: enabled
